# c-practice

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  common.h  docker-compose.yml  main.c  snippet.c  snippet.sh  toc.md
.github/workflows/: build.yml  ci.yml
algorithms/misc/: mathematical.c  mathematical.h
algorithms/sorting/: bubble_sort.c  helper.c  helper.h  sorting.h
core/: core.h
core/basic/: arrays.c  arrays.h  basic.h  data_types.c  data_types.h  enums.c  enums.h  files.c  files.h  integers.c  integers.h  io.c  io.h  keywords.c  keywords.h  macros.c  macros.h  operators.c  operators.h  pointers.c  pointers.h  strings.c  strings.h  structs.c  structs.h  unions.c  unions.h  variables.c  variables.h
core/intro/: data_types.c  flow_control.c  flow_control.h
core/misc/: enums.c  enums.h  macros.c  macros.h
core/std/: assert_test.c  assert_test.h  ctype_test.c  ctype_test.h  limits_test.c  limits_test.h  std.h
ds/: array.c  array.h  linked_list.c  linked_list.h
playground/: .gitignore  clean.sh  main.c
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt
src/algorithms/leetcode/: l0001.c
src/algorithms/lib/: hash.c
src/apue/: CMakeLists.txt
src/apue/ch01/: CMakeLists.txt  custom_cat.c  custom_copy.c  custom_ls.c
src/apue/include/: apue.h
src/apue/intro/: CMakeLists.txt  custom_cat.c  custom_copy.c  custom_ls.c  display_pid.c  shell1.c
src/apue/lib/: bufargs.c  cliconn.c  clrfl.c  daemonize.c  error.c  errorlog.c  lockreg.c  locktest.c  nspipe.c  openmax.c  pathalloc.c  popen.c  prexit.c  prmask.c  ptyfork.c  ptyopen.c  readn.c  recvfd.c  semaph.c  senderr.c  sendfd.c  servaccept.c  servlisten.c  setfd.c  setfl.c  signal.c  signalintr.c  sleep.c  sleepus.c  spipe.c  strerror.c  tellwait.c  ttymodes.c  writen.c
src/core/: CMakeLists.txt  core.h
src/core/arrays/: CMakeLists.txt  as_parameters.c  contiguous_memory_location.c  declaration.c  iteration.c  main.c  name.c
src/core/assert/: CMakeLists.txt  main.c
src/core/control_flows/: CMakeLists.txt  break_continue.c  for.c  goto.c  if.c  main.c  switch.c  while.c
src/core/ctype/: CMakeLists.txt  main.c
src/core/data_types/: CMakeLists.txt  basic.c  bool.c  custom.c  main.c  overflow.c  promotion.c  size.c  void.c
src/core/enums/: CMakeLists.txt  basic.c  card.c  main.c  switch_enums.c  week.c
src/core/files/: CMakeLists.txt  basic.c  files.h  fseek_vs_rewind.c  getc_vs_feof.c  main.c  w_vs_wx_mode.c
src/core/float/: CMakeLists.txt  main.c
src/core/include/: core.h
src/core/ios/: CMakeLists.txt  echo.c  fflush.c  gets.c  main.c  n_formatter.c  percent_char.c  puts.c  scanf.c  scansets.c
src/core/keywords/: CMakeLists.txt  main.c
src/core/limits/: CMakeLists.txt  main.c
src/core/macros/: CMakeLists.txt  condition.c  dash_operator.c  default_value.c  increment.c  macros.h  main.c  multiline.c  multiply.c  remove_macro.c  square.c  std.c  stringizing_operator.c  token_pasting_operator.c
src/core/numbers/: CMakeLists.txt  main.c
src/core/operators/: CMakeLists.txt  arithmetic.c  assignment.c  bitwise.c  comma.c  increment_decrement.c  logical.c  main.c  modulo.c  relational.c  short_circuiting.c  sizeof.c  ternary.c
src/core/pointers/: CMakeLists.txt  array.c  basic.c  main.c  memory_management.c  modification.c
src/core/strings/: CMakeLists.txt  initialization.c  main.c  read_from_stdin.c
src/core/structs/: CMakeLists.txt  basic.c  complex.c  ds_padding.c  employ.c  flexible_array.c  main.c  padding.c
src/core/unions/: CMakeLists.txt  basic.c  main.c  point.c
src/core/variables/: CMakeLists.txt  concepts.c  const.c  declaration.c  extern.c  main.c  rest.c  static.c
src/dsa/: CMakeLists.txt
src/dsa/include/: array_list.h  sorting.h  tree.h
src/dsa/leetcode/: CMakeLists.txt  p0001.c
src/dsa/lib/: array_list.c  util.c
src/dsa/list/: CMakeLists.txt  arraylist.c
src/dsa/sorting/: CMakeLists.txt  sorting.c
src/dsa/trees/: CMakeLists.txt  btree.c
src/ipc/: CMakeLists.txt
src/ipc/fifo/: read.c  write.c
src/ipc/pipe/: main.c
src/ipc/semaphore/: producer_consumer.c
src/ipc/shared_memory/: get.c  run.sh  set.c
src/ipc/signal/: shutdown.c
src/misc/: CMakeLists.txt
src/misc/epoll/: main.c
src/misc/message/: receive.c  send.c
src/misc/openmp/: main.c
src/misc/signal/: demo.c  shutdown.c
src/misc/socket/: client.c  server.c
src/misc/system_call/: file.c
src/misc/zombie/: main.c  waiting_children.c
src/nix/: CMakeLists.txt
src/nix/socket/: epoll.c  poll.c  select.c  select_fd_set.c
src/oj/: CMakeLists.txt
src/oj/zoj/: p1001.c
src/process/: CMakeLists.txt
src/process/layout/: simple.c
src/std/assert/: main.c
src/std/ctype/: main.c
src/std/float/: main.c
src/std/include/: std.h
src/std/limits/: main.c
src/std/stdlib/: const.c  rand.c
