cmake_minimum_required(VERSION 3.16)
project(c_practice_src_core C)
set(CMAKE_C_STANDARD 11)

add_subdirectory(assert)
add_subdirectory(ctype)
add_subdirectory(limits)
add_subdirectory(arrays)
add_subdirectory(data_types)
add_subdirectory(enums)
add_subdirectory(files)
add_subdirectory(control_flows)
add_subdirectory(macros)
add_subdirectory(keywords)
add_subdirectory(variables)
add_subdirectory(operators)
add_subdirectory(structs)
add_subdirectory(pointers)
add_subdirectory(unions)
add_subdirectory(strings)
add_subdirectory(ios)